syntax = "proto3";
package ethermint.intrarelayer.v1;

import "gogoproto/gogo.proto";
import "cosmos/bank/v1beta1/bank.proto";

option go_package = "github.com/functionx/fx-core/x/intrarelayer/types";


// Owner enumerates the ownership of a ERC20 contract.
enum Owner {
    option (gogoproto.goproto_enum_prefix) = false;
    // OWNER_UNSPECIFIED defines an invalid/undefined owner.
    OWNER_UNSPECIFIED = 0;
    // OWNER_MODULE erc20 is owned by the intrarelayer module account.
    OWNER_MODULE = 1;
    // EXTERNAL erc20 is owned by an external account.
    OWNER_EXTERNAL = 2;
}

// TokenPair defines an instance that records pairing consisting of a Cosmos
// native Coin and an ERC20 token address.
message TokenPair {
    option (gogoproto.equal) = true;
    // address of ERC20 contract token
    string erc20_address = 1;
    // cosmos base denomination to be mapped to
    string denom = 2;
    // shows token mapping enable status
    bool enabled = 3;
    // ERC20 owner address ENUM (0 invalid, 1 ModuleAccount, 2 external address)
    Owner contract_owner = 4;
}


